--- a/index.html
+++ b/index.html
@@ -4,156 +4,181 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Web Studio</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet"
-        />
-    <title>WebStudio</title>
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header class="top-line">
-        <nav>
-            <a href="./index.html" class="upper-logo">Web<span class="studio-logo">Studio</span> </a>
-            <ul>
-                <li>
-                    <a href="./index.html" class="nav-menu">Studio</a>
-                </li>
-                <li>
-                    <a href="" class="nav-menu">Portfolio</a>
-                </li>
-                <li>
-                    <a href="" class="nav-menu">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="address-menu">
-            <ul>
-                <li>
-                    <a href="mailto:info@devstudio.com" class="address-info">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111" class="address-info">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
-
+    <header class="page-header">
+        <div class="container header-container">
+            <nav class="page-nav">
+                <a class="logo-header" href="./index.html">Web<span class="logo-black-header">Studio</span>
+                </a>
+                <ul class="menu">
+                    <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
+                    <li class="menu-item"><a class="menu-link" href="">Portfolio</a></li>
+                    <li class="menu-item"><a class="menu-link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="page-contact">
+                <ul class="contact-list">
+                    <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a> <br /></li>
+                    <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a> <br /></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
-
-
     <main>
-        <section class="first-section">
-            <h1 class="page-title">Effective Solutions
-                for Your Business</h1>
-            <button type="button" class="first-section-button">Order Service</button>
+
+        <section class="hero">
+            <div class="container hero-container">
+                <h1 class="main-title">Effective Solutions for Your Business</h1>
+                <button class="btn-service-block" type="button">Order Service</button>
+            </div>
         </section>
 
-        <section class="second-section">
-            <h2 class="page-title-second">Our Benefits</h2>
-            <ul>
-                <li>
-                    <h3 class="page-title-benefits">Strategy</h3>
-                    <p class="text-benefits">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="page-title-benefits">Punctuality</h3>
-                    <p class="text-benefits">Bring the key message to the brand's audience for the best
-                        price within the shortest possible
-                        time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="page-title-benefits">Diligence</h3>
-                    <p class="text-benefits">Research and confirm brands that present the strongest digital
-                        growth opportunities and minimize
-                        risk.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="page-title-benefits">Technologies</h3>
-                    <p class="text-benefits">Design practice focused on digital experiences. We bring forth
-                        a deep passion for
-                        problem-solving.
-                    </p>
-                </li>
-            </ul>
+        <section class="benefits">
+            <div class="container benefits-container">
+                <h2 class="visually-hidden">Our benefits</h2>
+                <ul class="benefits-list">
+                    <li class="benefits-list-item">
+                        <h3 class="benefits-list-title">Strategy</h3>
+                        <p class="benefits-list-text">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.</p>
+                    </li>
+                    <li class="benefits-list-item">
+                        <h3 class="benefits-list-title">Punctuality</h3>
+                        <p class="benefits-list-text">Bring the key message to the brand's audience for the best price
+                            within the
+                            shortest possible time.
+                        </p>
+                    </li>
+                    <li class="benefits-list-item">
+                        <h3 class="benefits-list-title">Diligence</h3>
+                        <p class="benefits-list-text">Research and confirm brands that present the strongest digital
+                            growth
+                            opportunities and minimize risk.</p>
+
+                    </li>
+                    <li class="benefits-list-item">
+                        <h3 class="benefits-list-title">Technologies</h3>
+                        <p class="benefits-list-text">Design practice focused on digital experiences. We bring forth a
+                            deep passion for
+                            problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
-        <section class="third-section">
-            <h2 class="page-title-team">Our Team</h2>
-            <ul>
-                <li class="team-card">
-                    <img src="./images/team/mark_guerrero.jpg" alt="Mark Guerrero avatar" width="264" height="260">
-                    <h3 class="name-team">Mark Guerrero</h3>
-                    <p class="team-profession">Product Designer</p>
-                </li>
-                <li class="team-card">
-                    <img src="./images/team/tom_ford.jpg" alt="Tom Ford avatar" width="264" height="260">
-                    <h3 class="name-team">Tom Ford</h3>
-                    <p class="team-profession">Frontend Developer</p>
-                </li>
-                <li class="team-card">
-                    <img src="./images/team/camila_garcia.jpg" alt="Camila Garcia avatar" width="264" height="260">
-                    <h3 class="name-team">Camila Garcia</h3>
-                    <p class="team-profession">Marketing</p>
-                </li>
-                <li class="team-card">
-                    <img src="./images/team/daniel_wilson.jpg" alt="Daniel Wilson avatar" width="264" height="260">
-                    <h3 class="name-team">Daniel Wilson</h3>
-                    <p class="team-profession">UI Designer</p>
-                </li>
-            </ul>
+        <section class="team">
+            <div class="container team-container">
+                <h2 class="section-title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="team-list-item">
+                        <img class="team-list-img" src="./images/team/mark_guerrero.jpg" alt="Mark Guerrero avatar"
+                            width="264" height="260">
+                        <div class="team-item-name">
+                            <h3 class="team-list-title">Mark Guerrero</h3>
+                            <p class="team-list-text">Product Designer</p>
+                        </div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-list-img" src="./images/team/tom_ford.jpg" alt="Tom Ford avatar" width="264"
+                            height="260">
+                        <div class="team-item-name">
+                            <h3 class="team-list-title">Tom Ford</h3>
+                            <p class="team-list-text">Frontend Developer</p>
+                        </div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-list-img" src="./images/team/camila_garcia.jpg" alt="Camila Garcia avatar"
+                            width="264" height="260">
+                        <div class="team-item-name">
+                            <h3 class="team-list-title">Camila Garcia</h3>
+                            <p class="team-list-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="team-list-img" src="./images/team/daniel_wilson.jpg" alt="Daniel Wilson avatar"
+                            width="264" height="260">
+                        <div class="team-item-name">
+                            <h3 class="team-list-title">Daniel Wilson</h3>
+                            <p class="team-list-text">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
 
-        <section class="fourth-section">
-            <h2 class="page-title-portfolio">Our Portfolio</h2>
-            <ul>
-                <li class="portfolio-card">
-                    <img src="./images/portfolio/img_1.jpg" alt="Banking App" width="360" height="300">
-                    <h3 class="portfolio-application">Banking App</h3>
-                    <p class="portfolio-direction">App</p>
-                </li>
-                <li class="portfolio-card">
-                    <img src="./images/portfolio/img_2.jpg" alt="Cashless Payment" width="360" height="300">
-                    <h3 class="portfolio-application">Cashless Payment</h3>
-                    <p class="portfolio-direction">Marketing</p>
-                </li>
-                <li class="portfolio-card">
-                    <img src="./images/portfolio/img_3.jpg" alt="Meditation App" width="360" height="300">
-                    <h3 class="portfolio-application">Meditation App</h3>
-                    <p class="portfolio-direction">App</p>
-                </li>
-                <li class="portfolio-card">
-                    <img src="./images/portfolio/img_4.jpg" alt="Taxi Service" width="360" height="300">
-                    <h3 class="portfolio-application">Taxi Service</h3>
-                    <p class="portfolio-direction">Marketing</p>
-                </li>
-                <li class="portfolio-card">
-                    <img src="./images/portfolio/img_5.jpg" alt="Screen Illustrations" width="360" height="300">
-                    <h3 class="portfolio-application">Screen Illustrations</h3>
-                    <p class="portfolio-direction">Design</p>
-                </li>
-                <li class="portfolio-card">
-                    <img src="./images/portfolio/img_6.jpg" alt="Online Courses" width="360" height="300">
-                    <h3 class="portfolio-application">Online Courses</h3>
-                    <p class="portfolio-direction">Marketing</p>
-                </li>
-            </ul>
+        <section class="section-portfolio">
+            <div class="container portfolio-container">
+                <h2 class="portfolio-title">Our Portfolio</h2>
+                <ul class="portfolio-list">
+                    <li class="portfolio-list-item">
+                        <img src="./images/portfolio/img_1.jpg" alt="Banking App" width="360" height="300">
+                        <div class="portfolio-title-text">
+                            <h3 class="portfolio-item-title">Banking App</h3>
+                            <p class="portfolio-item-text">App</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/portfolio/img_2.jpg" alt="Cashless Payment" width="360" height="300">
+                        <div class="portfolio-title-text">
+                            <h3 class="portfolio-item-title">Cashless Payment</h3>
+                            <p class="portfolio-item-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/portfolio/img_3.jpg" alt="Meditation App" width="360" height="300">
+                        <div class="portfolio-title-text">
+                            <h3 class="portfolio-item-title">Meditation App</h3>
+                            <p class="portfolio-item-text">App</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/portfolio/img_4.jpg" alt="Taxi Service" width="360" height="300">
+                        <div class="portfolio-title-text">
+                            <h3 class="portfolio-item-title">Taxi Service</h3>
+                            <p class="portfolio-item-text">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/portfolio/img_5.jpg" alt="Screen Illustrations" width="360"
+                            height="300">
+                        <div class="portfolio-title-text">
+                            <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                            <p class="portfolio-item-text">Design</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img src="./images/portfolio/img_6.jpg" alt="Online Courses" width="360" height="300">
+                        <div class="portfolio-title-text">
+                            <h3 class="portfolio-item-title">Online Courses</h3>
+                            <p class="portfolio-item-text">Marketing</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
-    <footer class="lower-box">
-        <a href="./index.html" class="footer-logo">Web<span class="footer-logo-studio">Studio</span> </a>
-        <p class="footer-info">Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.
-        </p>
+
+    <footer class="page-footer">
+        <div class="container footer-container">
+            <a class="logo-footer" href="./index.html">Web<span class="logo-white-footer">Studio</span>
+            </a>
+            <p class="page-footer-text">Increase the flow of customers and sales for your business with digital
+                marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
 
